--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.plexapp.plugins.discoveryca</string>
+	<key>PlexClientPlatformExclusions</key>
+	<string>Android</string>
 	<key>PlexClientPlatforms</key>
 	<string>*</string>
 	<key>PlexFrameworkVersion</key>
